cleared ranglisten punkte

--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -113,13 +113,12 @@
 								<option value="3">3 - DDL Turniere (DDL-Mindestgröße = <12 Teams)</option>
 								<option value="4">4 - DDL Turniere (>DDL-Mindestgröße = <12 Teams)</option>
 								<option value="5">5 - Regionalmeisterschaften</option>
-								<option value="6">6 - ZEIT DEBATTEN; Nat. eng. IV´s & Opens ESL; Masters Cup</option>
-								<option value="7">7 - Nat. eng. IV´s & Opens open break/Int. IV´s & Opens ESL; Einladungsturnier</option>
-								<option value="8">8 - Int. IV´s & Opens open break</option>
-								<option value="9">9 - DDM; Euros ESL</option>
-								<option value="10">10 - Worlds ESL</option>
-								<option value="11">11 - Oxford; Cambridge IV open break</option>
-								<option value="12">12 - Euros; Worlds Open-Break</option>
+								<option value="6">6 - ZEIT DEBATTEN; Masters Cup</option>
+								<option value="7">7 - Nat. eng. IV´s & Opens; Einladungsturnier</option>
+								<option value="8">8 - Int. IV´s & Opens</option>
+								<option value="9">9 - DDM</option>
+								<option value="11">11 - Oxford; Cambridge IV</option>
+								<option value="12">12 - Euros; Worlds</option>
 							</select>
 						</div>
 					</div>
