--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -11,7 +11,7 @@
 </header>
 
 <!-- SHOWN ONLY TO PEOPLE WITHOUT PROPPER RIGHTS -->
-<section id="user-info" ng-hide="istVorstand">
+<section ng-hide="istVorstand">
 	<div class="container">
 		<div class="row">
 			<!-- Table -->
@@ -27,7 +27,7 @@
 	</div>
 </section>
 
-<section id="user-info" ng-show='istVorstand'>
+<section ng-show='istVorstand'>
 
 	<!-- NEW TOURNAMENT -->
 	<div class="container">
