added option to apply for funding - api and model

--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -45,7 +45,7 @@
 
 <div class="ngdialog-buttons">
 	<div class="checkbox help-tip tournaments-dialog-checkbox">
-		<label><input type="checkbox" value=""> I want to receive funding for this tournament.</label>
+		<label><input ng-model="funding" type="checkbox" value=""> I want to receive funding for this tournament.</label>
 		<!--TODO Fill with funding criteria-->
 		<p>[FILL WITH FUNDING CRITERIA]</p>
 	</div>
