--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -88,12 +88,12 @@
 						<i class="fa fa-times" aria-hidden="true"></i>
 						<br>
 						<button ng-show="istVorstand" class="btn btn-sm btn-outline-primary" ng-click="went(users.pivot_role, users.pivot_id, 1)">Went</button>
-						<button ng-show="istVorstand" class="btn btn-sm btn-outline-primary" ng-click="undoAttendance(users.pivot_id)">Undo</button>
+						<button ng-show="istVorstand" class="btn btn-sm btn-secondary" ng-click="undoAttendance(users.pivot_id)">Undo</button>
 					</td>
 					<td ng-show="users.pivot_attended == 1" class="text-center">
 						<i class="fa fa-check" aria-hidden="true"></i>
 						<br>
-						<button ng-show="istVorstand" class="btn btn-sm btn-outline-primary" ng-click="undoAttendance(users.pivot_id)">Undo</button>
+						<button ng-show="istVorstand" class="btn btn-sm btn-secondary" ng-click="undoAttendance(users.pivot_id)">Undo</button>
 					</td>
 
 					<!--DELETE BUTTON-->
