--- a/public/profile.html
+++ b/public/profile.html
@@ -141,6 +141,7 @@
 							<th>Role</th>
 							<th>Team Name</th>
 							<th>Comment</th>
+							<th>Funding</th>
 							<th>Price</th>
 							<th>Paid</th>
 							<th>Debt</th>
@@ -181,6 +182,8 @@
 	<td ng-click="openDetails(tournament)">{{tournament.pivot_role}}</td>
 	<td ng-click="openDetails(tournament)">{{tournament.pivot_teamname}}</td>
 	<td ng-click="openDetails(tournament)">{{tournament.pivot_comment}}</td>
+	<td ng-click="openDetails(tournament)" ng-show="tournament.pivot_funding == 0" class="text-center"><i class="fa fa-times" aria-hidden="true"></i></td>
+	<td ng-click="openDetails(tournament)" ng-show="tournament.pivot_funding == 1" class="text-center"><i class="fa fa-check" aria-hidden="true"></i></td>
 	<td class="preventWrap" ng-click="openDetails(tournament)">{{tournament.pivot_price_owed | currency:"€"}}</td>
 	<td class="preventWrap" ng-click="openDetails(tournament)">{{tournament.pivot_price_paid | currency:"€"}}</td>
 	<td class="currencySign" data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:'€'}}"></td>
@@ -212,6 +215,7 @@
 		<input style="min-width: 80px" disabled class="form-control" type="text" />
 	</td>
 	<td><textarea style="min-width: 180px" rows="3" placeholder="You can leave a comment here." ng-model="selected.pivot_comment" class="form-control"></textarea></td>
+	<td><input type="checkbox" class="form-check" ng-model="selected.pivot_funding" ng-checked="selected.pivot_funding == 1"></td>
 	<td class="preventWrap">{{tournament.pivot_price_owed | currency:"€"}}</td>
 	<td class="preventWrap">{{tournament.pivot_price_paid | currency:"€"}}</td>
 	<td class="currencySign" data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:'€'}}"></td>
