added funding note

--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -53,7 +53,7 @@
 	<div class="checkbox help-tip tournaments-dialog-checkbox">
 		<label><input ng-model="funding" type="checkbox" value=""> I want to receive <b>funding</b> for this tournament.</label>
 		<!--TODO Fill with funding criteria-->
-		<p>[FILL WITH FUNDING CRITERIA]</p>
+		<p>The funding criteria will be updated and published on 1 September 2017</p>
 	</div>
 	<button class="btn btn-outline-success pull-right" ng-click="reg()">Register</button>
 </div>
