improved UX on tournaments language filter option

--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -24,7 +24,7 @@
                         <th>Date</th>
                         <th class="hidden-xs">Spots</th>
                         <th>
-                            <button class="btn btn-outline-warning" ng-click="toggle()">{{toggleVal}}</button>
+                            <button class="btn btn-outline-warning pointer" ng-click="toggle()"><i class="fa fa-filter" aria-hidden="true"></i> {{toggleVal}}</button>
                         </th>
                     </tr>
                     </thead>
