--- a/public/finances.html
+++ b/public/finances.html
@@ -93,7 +93,7 @@
                     <td class="hidden-xs">#</td>
                     <td>{{users.length}}</td>
                     <td></td>
-                    <td></td>
+                    <td></td>data-
                     <td>{{totalClubDebt | currency:"€"}}</td>
                     <td></td>
                     <td></td>
@@ -112,18 +112,18 @@
             <table class="table table-hover table-responsive">
                 <thead>
                 <tr>
-                    <th class="hidden-xs"><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('id')">Tournament ID</button></th>
-                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('name')">Name</button></th>
-                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('startdate')">Date</button></th>
-                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_role')">Role</button></th>
-                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_success')">Success</button></th>
-                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_points')">Points</button></th>
-                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_paid')">Price Paid</button></th>
-                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_owed')">Price Owed</button></th>
+                    <th class="hidden-xs"><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('id')">Tournament ID</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('name')">Name</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('startdate')">Date</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_role')">Role</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_success')">Success</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_points')">Points</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_price_paid')">Price Paid</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_price_owed')">Price Owed</button></th>
                     <th>Debt</th>
-					<th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_funding')">Funding</button></th>
-					<th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_transaction_date')">Transaction Date</button></th>
-					<th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_transaction_from')">Transaction From</button></th>
+					<th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_funding')">Funding</button></th>
+					<th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_transaction_date')">Transaction Date</button></th>
+					<th><button class="btn btn-outline-info btn-sm" data-ng-click="sortTournaments('pivot_transaction_from')">Transaction From</button></th>
 					<th></th>
                 </tr>
                 </thead>
