--- a/public/profile.html
+++ b/public/profile.html
@@ -3,8 +3,10 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="image-cropper">
-					<a href="#/imageUpload">
-						<img class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'"/>
+					<!--<a href="#/imageUpload">-->
+					<a href="#">
+						<img class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}"
+							 onerror="this.src='images/bdu_quad.png'"/>
 						<p>Add your<br>profile picture</p>
 					</a>
 				</div>
