removed link to picture upload for now

--- a/public/profile.html
+++ b/public/profile.html
@@ -4,10 +4,12 @@
 			<div class="col-sm-12">
 				<div class="image-cropper">
 					<!--<a href="#/imageUpload">-->
-					<a href="#">
+					<a href="#/profile">
 						<img class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}"
 							 onerror="this.src='images/bdu_quad.png'"/>
-						<p>Add your<br>profile picture</p>
+						<!--<p>Add your<br>profile picture</p>-->
+						<p>Profile upload at the <br>
+							moment not possible.</p>
 					</a>
 				</div>
 				<div class="intro-text">
