--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -47,7 +47,11 @@
 					<tbody class="left-align">
 					<tr class="pointer" ng-repeat="tournaments in tournamentsusers" ng-click="goToUsers(tournaments)"
 						ng-class="{'bg-light-grey': tournaments.isOld}">
-						<td class="hidden-xs">{{tournaments.id}}</td>
+						<td class="hidden-xs">
+							{{tournaments.id}} &nbsp;
+							<i data-ng-show="tournaments.hasOpenReg && istVorstand"
+							   class="fa fa-exclamation-circle" style="color: #db2a28;" aria-hidden="true"></i>
+						</td>
 						<td>{{tournaments.name}}</td>
 						<td class="hidden-xs">{{tournaments.startdate | date:'dd.MM.yyyy'}}</td>
 						<td>{{tournaments.language}}</td>
